# isa_code_reviewer2

./: .env.template  .gitignore  LICENSE  pyproject.toml
.devcontainer/: devcontainer.json  post_create.sh
.github/: code-review-config.yml
.github/workflows/: pr-review.yml
.squad/: .first-run  routing.md  team.md
.squad/agents/Rai/: charter.md  history.md
.squad/agents/chandler/: charter.md  history.md
.squad/agents/joey/: charter.md  history.md
.squad/agents/monica/: charter.md  history.md
.squad/agents/rachel/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/ross/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/identity/: now.md  wisdom.md
reviewers/: cli.py  comment_renderer.py  config.py  diff_parser.py  github_client.py  orchestrator.py  schemas.py
reviewers/agents/: __init__.py  base.py  code_quality.py  security.py  test_coverage.py
reviewers/models/: __init__.py  anthropic.py  base.py  openai.py  registry.py
tests/: conftest.py  test_comment_renderer.py  test_config.py  test_diff_parser.py  test_orchestrator.py
tests/agents/: test_code_quality.py  test_security.py  test_test_coverage.py
tests/fixtures/: code-review-config.yml  github-event.json
